fixed places gaps

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -17,8 +17,9 @@
 
 @media screen and (max-width: 660px) {
   .footer {
-    margin-top: 64px;
-    padding: 0 16px 24px;
+    width: 52.5%;
+    margin: 64px 42.5% 0 5%;
+    padding: 0 0 24px;
     flex-direction: column;
   }
 }
