--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -15,3 +15,10 @@
     width: 93.75%;
   }
 }
+
+@media screen and (max-width: 660px) {
+  .header {
+    width: 90%;
+  }
+}
+
