--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,14 +12,16 @@
 @media screen and (max-width: 768px) {
   .lead__subtitle {
     width: 90%;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 30px;
+    line-height: 36px;
   }
 }
 
 @media screen and (max-width: 660px) {
   .lead__subtitle {
     margin-bottom: 40px;
+    line-height: 20px;
+    font-size: 16px;
     line-height: 20px;
   }
 }
