--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -29,6 +29,7 @@
 
 @media screen and (max-width: 660px) {
   .photo-grid {
+    width: 90%;
     grid-gap: 14px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(6, 1fr);
