--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,6 +7,11 @@
   margin-bottom: 25px;
 }
 
+.place__paragraph:last-of-type {
+  margin: 0;
+}
+
+
 @media screen and (max-width: 768px) {
   .place__paragraph {
     line-height: 26.08px;
