--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -18,6 +18,7 @@
 
 @media screen and (max-width: 660px) {
   .place__title {
+    margin-bottom: 30px;
     padding-left: 16px;
     font-size: 32px;
     line-height: 35px;
