--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -8,6 +8,7 @@
 
 @media screen and (max-width: 660px) {
   .place__website {
+    margin-bottom: 30px;
     padding-left: 16px;
     align-self: flex-start;
   }
